# SFML_Game

./: CMakeLists.txt  fix_windows_sfml_project.sh
.cache/clangd/index/: Aliases.h.31172247C240F604.idx  Flags.h.9E13BD9575C51A42.idx  HelpingFunctions.h.2FA3AB472BF5B71E.idx  Log.cpp.2F1978D141BA964F.idx  Log.h.E816C737C0A83392.idx  Player.cpp.62F2D739DCC2777E.idx  Player.h.852B2DB2CCD3B8F9.idx  Settings.h.D1DE7FAB3C54A38A.idx  StaticVars.h.A8DDD5D567E1BEC3.idx  TextureHandler.cpp.3B55853E46E688AC.idx  TextureHandler.h.B054EDB46AB32D58.idx  World.cpp.4B052F3D02730491.idx  World.h.063E523A1CBD5838.idx  main.cpp.11834E29B572D079.idx
cpp/: Bullet.cpp  Log.cpp  Player.cpp  TextureHandler.cpp  World.cpp  main.cpp
headers/: Aliases.h  Bullet.h  Flags.h  HelpingFunctions.h  Log.h  Player.h  Settings.h  StaticVars.h  TextureHandler.h  World.h
